# ThreatTriage

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
alembic/: env.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Sidebar.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: AdminPanel.jsx  Alerts.jsx  Dashboard.jsx  Incidents.jsx  LogIngestion.jsx  Login.jsx  MitreView.jsx  SOARDashboard.jsx  ThreatIntel.jsx
sigma_rules/: brute_force.yml  dns_exfil.yml  lateral_movement.yml  privilege_escalation.yml  reverse_shell.yml  suspicious_powershell.yml
src/threattriage/: __init__.py  auth.py  celery_app.py  cli.py  config.py  database.py  logging.py  main.py
src/threattriage/analysis/: __init__.py  anomaly.py  correlator.py  detection.py  mitre_mapper.py  ml_detector.py  scorer.py  sigma_loader.py
src/threattriage/api/: __init__.py  deps.py
src/threattriage/api/v1/: admin.py  auth.py  intel.py  routes.py  ws.py
src/threattriage/intel/: __init__.py  abuseipdb.py  alienvault.py  base.py  enrichment.py  geoip.py  virustotal.py
src/threattriage/models/: __init__.py  alert.py  audit_log.py  base.py  incident.py  ioc.py  log_entry.py  user.py
src/threattriage/parsers/: __init__.py  base.py  db_audit.py  firewall.py  http_access.py  ids.py  json_structured.py  syslog.py  windows_event.py
src/threattriage/reports/: __init__.py  generator.py  pdf_generator.py
src/threattriage/reports/templates/: incident_report.html
src/threattriage/schemas/: schemas.py
src/threattriage/soar/: __init__.py  playbooks.py
src/threattriage/tasks/: __init__.py  cold_storage.py  enrichment.py  ingestion.py  reporting.py
tests/: conftest.py  test_analysis.py  test_parsers.py
